# tg-inner-test

./: .gitignore  README.md  index.html  package.json  vite.config.js
.github/workflows/: windows-tauri.yml
src/: App-1.vue  App.vue  main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.conf.windows_x64.json
src-tauri/capabilities/: default.json  main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/tools/: mod.rs  starter.rs
