[package]
name = "tg-ff"
version = "3.0.0"
description = "tg-ff"
authors = ["tg-ff"]
license = ""
repository = ""
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tg_ff_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"

serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }

reqwest = { version = "0.11", features = ["json", "stream", "default-tls"] }

tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0"
sysinfo = "0.29.10"

once_cell = "1.18.0"

aes = "0.7"
block-modes = "0.8"
block-padding = "0.2"
hex = "0.4"
regex = "1"
hmac = "0.12"
sha2 = "0.10"

futures-util = "0.3.31"
tauri-plugin-dialog = "2"


windows = { version = "0.56.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_System_WindowsProgramming"] }
nix = "0.29.0"
winapi = "0.3.9"


